--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,15 @@
     <title>Contacta con Aitana Ábalos</title>
     <link rel="stylesheet" href="css/estilosMain.css"> 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85GMLR5ZG1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85GMLR5ZG1');
+</script>
 <body>
     <header>
         <h1>Contacta con Aitana Ábalos</h1>
