--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,15 @@
   <link rel="icon" href="images/aitana.ico">
   <link rel="stylesheet" type="text/css" href="css/estilosMain.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85GMLR5ZG1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85GMLR5ZG1');
+</script>
 <body>
   <header>
     <nav>
